hphp/hack/test/typecheck/genva_preserves_type_signatures1.php.exp
File "genva_preserves_type_signatures1.php", line 29, characters 10-14:
Unbound name: genva (a global function) (Naming[2049])
